--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,31 @@
+@import url("/color.css"); 
+
 table {
     table-layout: fixed;
-    width: 90%;
+    padding: 10px;
     border-collapse: collapse;
     background-color: black;
-    color: blanchedalmond;
+    font-family: Arial, Helvetica, sans-serif;
+}
+table > tbody > tr:first-child > td, table > tbody > tr:first-child > th  {
+    padding-top: 10px;
 }
 
+table > tbody > tr:last-child > td, table > tbody > tr:last-child > th  {
+    padding-bottom: 10px;
+}
+
+td {
+    padding-right: 10px;
+}
+
+.tableau {
+    margin: 10px;
+}
+
+th {
+    padding: 0 10px;
+}
   
 .select {
     user-select: none;
