--- a/color.css
+++ b/color.css
@@ -26,6 +26,14 @@ color: #7CDCDA;
     color: #1E4F3E;
 }
 
+.color-8 {
+    color: #DA63A1;
+}
+
+.color-9 {
+    color: #A7CE9B;
+}
+
 th {
     color: grey;
 }
